fix scrollbar and height card product

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,6 +2,27 @@ html {
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 15px;
+  background-color: rgba(6, 116, 236, 0.1);
+  border-radius: 9em
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.856);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(33, 116, 236, 0.5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  box-shadow: inset 0 0 6px rgba(33, 116, 236, 1);
+}
+
 *,
 *::before,
 *::after {
@@ -25,6 +46,8 @@ body {
   line-height: 30px;
   color: $text;
 }
+
+
 
 .container {
   max-width: 1170px;
@@ -199,6 +222,7 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    padding-bottom: 26px;
   }
 
   &__user {
@@ -241,10 +265,15 @@ body {
   }
 
   &__text {
-    display: inline-block;
+    max-height: 120px;
     color: $text;
-  }
+    overflow-x: hidden;
 
+    p {
+      margin: 0;
+
+    }
+  }
 
   &__footer {
     display: flex;
